# brain

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  LICENSE  README.md  REFACTORING.md  build-plugin.sh
.claude-plugin/: marketplace.json  plugin.json
docs/: ENTITY-GRAPH-DESIGN.md  GROWTH-PLAN.md  PHASE1-TEXT-PROCESSING.md
eval/: README.md  adaptive_eval.py  brain_identity_eval.py  brain_recall_identity_eval.py  skill_eval.py
hooks/: HOOKS.md  hooks.json
model-package/: README.md  download-model.sh  pyproject.toml
model-package/brain_embedding/: __init__.py
scripts/: seed_brain.py  split_monolith.py
servers/: __init__.py  brain.py  brain_absorb.py  brain_connections.py  brain_consciousness.py  brain_constants.py  brain_dreams.py  brain_engineering.py  brain_evolution.py  brain_mcp.py  brain_precision.py  brain_recall.py  brain_remember.py  brain_surface.py  brain_vocabulary.py  brain_voice.py  daemon.py  daemon_hooks.py  dal.py  embedder.py  metrics.py  migrate.py  recall_scorer.py  schema.py  text_processing.py
tests/: __init__.py  bench_common_word_filter.py  bench_identifier_split.py  bench_operator_channel.py  bench_precision_corpus.py  bench_precision_lifecycle.py  bench_sentence_split.py  bench_vocab_extraction.py  brain_test_base.py  eval_runner.py  generate_golden.py  golden_dataset.json  metrics.py  relearning.py  run_tests.py  test_brain_voice.py  test_comprehensive.py  test_core.py  test_daemon_hooks.py  test_encoder.py  test_hooks.py  test_precision.py  test_recall_quality.py  test_recall_scorer.py  test_system.py  transcript_parser.py
(+45 files in other folders)
